[package]
name = "substreams-solana-utils"
version = "0.1.3"
edition = "2021"

[lib]
name = "substreams_solana_utils"

[dependencies]
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
bs58 = "0.5.0"
regex = "1.10.5"
base64 = "0.22.1"
borsh = { version = "1.5.1", features = ["derive"] }
anyhow = "1.0.86"
