[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[lib]
name = "examples"
crate-type = ["lib", "cdylib"]

[dependencies]
substreams = "^0.5.0"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-solana-utils = { git = "https://github.com/0xpapercut/substreams-solana-utils", tag = "v0.1.1" }
prost = "0.11"
bs58 = "0.5.0"
anyhow = "1.0.86"
